log-schemas/27.5/opcua_binary_status_code_detail.rst
``opcua_binary_status_code_detail`` field reference
---------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``status_code_link_id`` (string)
     - The status_code_link_id information.

   * - ``source`` (integer - count)
     - The source information.

   * - ``source_str`` (string)
     - The source_str information.

   * - ``source_level`` (integer - count)
     - The source_level information.

   * - ``status_code`` (string)
     - The status_code information.

   * - ``severity`` (integer - count)
     - The severity information.

   * - ``severity_str`` (string)
     - The severity_str information.

   * - ``sub_code`` (integer - count)
     - The sub_code information.

   * - ``sub_code_str`` (string)
     - The sub_code_str information.

   * - ``structure_changed`` (boolean - bool)
     - The structure_changed information.

   * - ``semantics_changed`` (boolean - bool)
     - The semantics_changed information.

   * - ``info_type`` (integer - count)
     - The info_type information.

   * - ``info_type_str`` (string)
     - The info_type_str information.

   * - ``limit_bits`` (integer - count)
     - The limit_bits information.

   * - ``limit_bits_str`` (string)
     - The limit_bits_str information.

   * - ``overflow`` (boolean - bool)
     - The overflow information.

   * - ``historian_bits`` (integer - count)
     - The historian_bits information.

   * - ``historian_bits_str`` (string)
     - The historian_bits_str information.

   * - ``historianPartial`` (boolean - bool)
     - The historianPartial information.

   * - ``historianExtraData`` (boolean - bool)
     - The historianExtraData information.

   * - ``historianMultiValue`` (boolean - bool)
     - The historianMultiValue information.
